contact us page

--- a/app/views/abouts/contact_us.html.erb
+++ b/app/views/abouts/contact_us.html.erb
@@ -35,10 +35,10 @@
 
           <address>
             <p class="">
-              <strong>VERSO, Inc.</strong><br>
-              795 Folsom Ave, Suite 600<br>
-              San Francisco, CA 94107<br>
-              <i class="fa-icon-phone-sign"></i> + 4 (123) 456-7890
+              <strong>OzPark, Inc.</strong><br>
+              Nahshon 8/2<br>
+              Haifa, IL 34612<br>
+              <i class="fa-icon-phone-sign"></i> + 972 (4) 8112732
             </p>
 
             <div class="foot-line"></div>
@@ -52,18 +52,10 @@
         <div class="well">
           <div class="widget_nav_menu">
             <ul class="socialIcons">
-              <li class="vimeo"><a href="#">vimeo </a></li>
               <li class="facebook"><a href="#">facebook </a></li>
-              <li class="linkedin"><a href="#">linkedin </a></li>
               <li class="twitter"><a href="#">twitter</a></li>
-              <li class="twitter2"><a href="#">twitter2</a></li>
-              <li class="pinterest"><a href="#">pinterest</a></li>
-              <li class="flickr"><a href="#">flickr </a></li>
-              <li class="digg"><a href="#">digg</a></li>
-              <li class="yahoo1"><a href="#">yahoo1</a></li>
-              <li class="yahoo2"><a href="#">yahoo2</a></li>
-              <li class="reddit"><a href="#">reddit</a></li>
               <li class="googleplus"><a href="#">googleplus</a></li>
+<!--
               <li class="stumbleupon"><a href="#">stumbleupon</a></li>
               <li class="skype"><a href="#">skype</a></li>
               <li class="deviantart"><a href="#">deviantart</a></li>
@@ -76,6 +68,7 @@
               <li class="rss"><a href="#">rss </a></li>
               <li class="badoo"><a href="#">badoo </a></li>
               <li class="dribble"><a href="#">dribble </a></li>
+-->
               <!-- JUST UNCOMMENT ICONS THAT YOU NEED-->
               <!--<li class="blogger"><a href="#">blogger </a></li>
               <li class="homeicon"><a href="#">homeicon</a></li>
@@ -125,7 +118,7 @@
 
     jQuery(document).ready(function () {
 
-      jQuery('#map').gMap({ address: 'Sidney',
+      jQuery('#map').gMap({ address: 'Haifa, Nahshon 8/2',
         panControl: true,
         zoomControl: true,
         zoomControlOptions: {
@@ -146,7 +139,7 @@
         },
         zoom: 14,
         markers: [
-          { 'address': 'Sidney'}
+          { 'address': 'Haifa, Nahshon 8/2'}
         ]
 
 
