--- a/app/views/features/owner_dashboard.html.erb
+++ b/app/views/features/owner_dashboard.html.erb
@@ -13,7 +13,7 @@
 
 
   <h2 class="center standart-h2title">
-    <span class="large-text">Need more features? <span class="main-color">That's it!</span></span>
+    <span class="large-text">View your account <span class="main-color">Online</span></span>
   </h2>
 
   <hr class="half"/>
@@ -30,12 +30,11 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h3 class="standart-h2title pull-right">Responsive loyout</h3>
+    <h3 class="standart-h2title pull-right">Manage  your assets</h3>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      View and edit your assets online. Define location and rates areas. Dynamically change rates.
+      Maximize you pay in by defining rates by location and time.
     </p>
 
   </div>
@@ -68,12 +67,11 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h2 class="standart-h2title pull-left">Bright & colorful design</h2>
+    <h2 class="standart-h2title pull-left">View billing history</h2>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      View your payments history online. Payments history is available with detailed location, time and rates information.
+      You can also get totals per location, time.
     </p>
 
   </div>
@@ -96,12 +94,10 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h3 class="standart-h2title pull-right">Clear & commented HTML code</h3>
+    <h3 class="standart-h2title pull-right">Billing cancellation</h3>
     <hr class="half"/>
     <p class="lead pull-right">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      View billing revocation requests and accept of decline online. Drivers account will be updated automatically.
     </p>
 
   </div>
@@ -133,12 +129,10 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h2 class="standart-h2title pull-left">Modern page templates</h2>
+    <h2 class="standart-h2title pull-left">Billing statistics</h2>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      Maximize your pay in by viewing billing statistics and adapting rates according to supply and demand data.
     </p>
 
   </div>
@@ -155,14 +149,14 @@
 <div class="row-fluid">
   <div class="span12">
 
-    <h3 class="center standart-h2title "><span class="large-text">Limited time for lower price</span> <span
-    class="main-color large-text">$12</span>
+    <h3 class="center standart-h2title "><span class="large-text">Contact us for </span> <span
+    class="main-color large-text">Owner account</span>
     </h3>
 
 
     <div class="span12 center">
       <hr class="half"/>
-      <a href="#" title="" class="btn-action">Buy template</a>
+      <a href="/abouts/contact_us.html" title="" class="btn-action">Contact Us</a>
     </div>
   </div>
 </div>
