--- a/app/views/features/owner_app.html.erb
+++ b/app/views/features/owner_app.html.erb
@@ -13,7 +13,7 @@
 
 
   <h2 class="center standart-h2title">
-    <span class="large-text">Need more features? <span class="main-color">That's it!</span></span>
+    <span class="large-text">Find who is <span class="main-color">paying</span></span>
   </h2>
 
   <hr class="half"/>
@@ -30,12 +30,10 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h3 class="standart-h2title pull-right">Responsive loyout</h3>
+    <h3 class="standart-h2title pull-right">Sign in as owner</h3>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      Sign in to your owner account. Your owner account is associated with all your payments.
     </p>
 
   </div>
@@ -68,77 +66,11 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h2 class="standart-h2title pull-left">Bright & colorful design</h2>
+    <h2 class="standart-h2title pull-left">Check if a parked car is being paid</h2>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
-    </p>
-
-  </div>
-  <!--END:  FEATURE -->
-
-  <div class="span12">
-    <hr class="half"/>
-  </div>
-</div>
-<!-- ################ -->
-<!-- END: CONTAINER  FEATURE -->
-<!-- ################ -->
-
-<!-- ################ -->
-<!-- CONTAINER  FEATURE -->
-<!-- ################ -->
-<div class="row-fluid">
-
-
-  <!-- FEATURE -->
-  <div class="span6">
-
-    <h3 class="standart-h2title pull-right">Clear & commented HTML code</h3>
-    <hr class="half"/>
-    <p class="lead pull-right">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
-    </p>
-
-  </div>
-  <!--END:  FEATURE -->
-  <!--IMAGE -->
-  <div class="span6 center">
-    <img src="/assets/verso/bootstrap-premium-code2.jpg" class="" alt="feature bootstrap"/>
-  </div>
-  <!-- END IMAGE -->
-  <div class="span12">
-    <hr class="half"/>
-  </div>
-</div>
-<!-- ################ -->
-<!-- END: CONTAINER  FEATURE -->
-<!-- ################ -->
-
-<!-- ################ -->
-<!-- CONTAINER  FEATURE -->
-<!-- ################ -->
-<div class="row-fluid">
-
-  <!--IMAGE -->
-  <div class="span6 center">
-    <img src="/assets/verso/bootstrap-template.jpg" class="" alt="feature bootstrap"/>
-  </div>
-  <!-- END IMAGE -->
-
-  <!-- FEATURE -->
-  <div class="span6">
-
-    <h2 class="standart-h2title pull-left">Modern page templates</h2>
-    <hr class="half"/>
-    <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      Enter the car details or capture the license plate via your mobile device camera and
+      immediately find out if the parked car is being paid for.
     </p>
 
   </div>
@@ -155,14 +87,14 @@
 <div class="row-fluid">
   <div class="span12">
 
-    <h3 class="center standart-h2title "><span class="large-text">Limited time for lower price</span> <span
-    class="main-color large-text">$12</span>
+    <h3 class="center standart-h2title "><span class="large-text">Contact us for </span> <span
+    class="main-color large-text">Owner account</span>
     </h3>
 
 
     <div class="span12 center">
       <hr class="half"/>
-      <a href="#" title="" class="btn-action">Buy template</a>
+      <a href="/abouts/contact_us.html" title="" class="btn-action">Contact Us</a>
     </div>
   </div>
 </div>
