--- a/app/views/layouts/admin_unregistered.html.erb
+++ b/app/views/layouts/admin_unregistered.html.erb
@@ -7,72 +7,59 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="">
-  <%= stylesheet_link_tag "application", media: "all" %>
 
-  <!--[if lt IE 7]>
-  <%= stylesheet_link_tag 'verso/font-awesome-ie7.min.css' %>
-  <![endif]-->
-
-  <%= yield :stylesheets %>
-  <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Patua+One' %>
+  <!-- Le styles -->
+  <%= stylesheet_link_tag 'admin', media: 'all' %>
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
-    <%= javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js" %>
+  <script src="/assets/admin/html5.js"></script>
   <![endif]-->
   <!-- Le fav and touch icons -->
+  <link rel="shortcut icon" href="/assets/admin/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/admin/bootstrap-apple-114x114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/admin/bootstrap-apple-114x114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/admin/bootstrap-apple-72x72.png">
+  <link rel="apple-touch-icon-precomposed" href="/assets/admin/bootstrap-apple-57x57.png">
 
-  <%= favicon_link_tag %>
-
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/verso/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/verso/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/verso/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="/assets/verso/apple-touch-icon-57-precomposed.png">
-
-  <%= csrf_meta_tags %>
 </head>
 <body>
 
-<!--START MAIN-WRAPPER-->
-<div class="main-wrapper">
+<div class="container">
 
-  <% if content_for? :page_header %>
-      <%= yield :page_header %>
-  <% else %>
+  <div class="row">
 
-      <%= render 'navigation' %>
-
-      <!-- PAGE HEADER -->
-      <div class="page-header">
-        <div class="shine">
+    <div class="span4 offset4">
+      <div class="navbar">
+        <div class="navbar-inner">
           <div class="container">
-            <div class="row-fluid">
-              <div class="span12">
-              </div>
-            </div>
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="#" style="color: #ffffff;">ADMIN PANEL</a>
+            <div class="nav-collapse">
+
+            </div><!-- /.nav-collapse -->
           </div>
-        </div>
+        </div><!-- /navbar-inner -->
       </div>
-      <!-- PAGE HEADER -->
-  <% end %>
 
-  <!-- CONTENT CONTAINER-->
-  <div class="container">
+      <% flash.each do |key, value| %>
+        <div class="alert alert-#{key}">
+          <strong><%= value %></strong>
+        </div>
+      <% end %>
 
-    <%= yield %>
+      <%= yield %>
+    </div>
 
   </div>
 
-  <%= render 'footer' %>
-
 </div>
-<!-- END: MAIN-WRAPPER-->
-<!-- Le javascript
-    ================================================== -->
-<!-- Placed at the end of the document so the abouts load faster -->
-<%= javascript_include_tag "application" %>
 
-<%= yield :scripts %>
+<%= javascript_include_tag 'admin', media: 'all' %>
 
 </body>
 </html>
