more merge changes

--- a/app/views/abouts/about_us.html.erb
+++ b/app/views/abouts/about_us.html.erb
@@ -8,6 +8,9 @@
                     <!--END: BREADCRUMB -->
 <% end %>
 
+<script>
+  $("#about-nav").addClass("active");
+</script>
 
 <div class="row-fluid">
   <!-- ASIDE -->
