--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -45,6 +45,7 @@
 
               <% if current_user %>
                 <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+                <li><a href="<%= dashboard_admin_pages_path %>">Dashboard</a></li>
               <% else %>
                 <li class="dropdown sfHover"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in</a>
                   <ul class="dropdown-menu">
