--- a/app/views/layouts/owner.html.erb
+++ b/app/views/layouts/owner.html.erb
@@ -183,8 +183,8 @@
           </div>
           <div class="accordion-group">
             <div class="accordion-heading">
-              <a style="text-decoration: none;text-align: left" class="accordion-toggle btn" href="<%= user_cars_path current_user %>">
-                <i class="icon-road icon-white"></i><span> Cars</span>
+              <a style="text-decoration: none;text-align: left" class="accordion-toggle btn" href="<%= edit_user_password_path  %>">
+                <i class="icon-user icon-white"></i><span> Reset Password</span>
               </a>
             </div>
           </div>
