--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -40,6 +40,9 @@
     <%= f.check_box :terms_of_service %> I agree all your <a href="#">Terms of Services</a>
   </label>
   <br>
+
+  <%= f.hidden_field :creditor_id, :value => @creditor.id %>
+
   <div class="input-prepend">
     <button class="btn btn-danger"><i class="icon-check"></i> Sign Up</button>
   </div>
