--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -32,8 +32,8 @@
     <%= f.text_field :city %>
   </div>
   <div class="field">
-    <%= f.label :creditor %><br />
-    <%= f.text_field :creditor %>
+    <%= f.label :bank_account %><br />
+    <%= f.text_field :bank_account %>
   </div>
   <div class="field">
     <%= f.label :rate %><br />
