--- a/app/views/areas/_form.html.erb
+++ b/app/views/areas/_form.html.erb
@@ -20,8 +20,8 @@
     <%= @area.city.name %>
   </div>
   <div class="field">
-    <%= f.label :creditor_id %><br />
-    <%= f.text_field :creditor_id %>
+    <%= f.label :bank_account_id %><br />
+    <%= f.text_field :bank_account_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
