--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -7,7 +7,7 @@
     <th>Street</th>
     <th>Area</th>
     <th>City</th>
-    <th>Creditor</th>
+    <th>Bank Account</th>
     <th>Rate</th>
     <th>User</th>
     <th>Start time</th>
@@ -24,7 +24,7 @@
     <td><%= payment.street %></td>
     <td><%= payment.area %></td>
     <td><%= payment.city %></td>
-    <td><%= payment.creditor %></td>
+    <td><%= payment.bank_account %></td>
     <td><%= payment.rate %></td>
     <td><%= payment.user %></td>
     <td><%= payment.start_time %></td>
