--- a/app/views/bank_accounts/index.html.erb
+++ b/app/views/bank_accounts/index.html.erb
@@ -15,7 +15,7 @@
     <th></th>
   </tr>
 
-<% @bankaccounts.each do |bank_account| %>
+<% @bank_accounts.each do |bank_account| %>
   <tr>
     <td><%= bank_account.name %></td>
     <td><%= bank_account.bank_name %></td>
