--- a/app/views/bank_accounts/show.html.erb
+++ b/app/views/bank_accounts/show.html.erb
@@ -2,44 +2,44 @@
 
 <p>
   <b>Name:</b>
-  <%= @bankaccount.name %>
+  <%= @bank_account.name %>
 </p>
 
 <p>
   <b>Bank name:</b>
-  <%= @bankaccount.bank_name %>
+  <%= @bank_account.bank_name %>
 </p>
 
 <p>
   <b>Bank code:</b>
-  <%= @bankaccount.bank_code %>
+  <%= @bank_account.bank_code %>
 </p>
 
 <p>
   <b>Bank office:</b>
-  <%= @bankaccount.bank_office %>
+  <%= @bank_account.bank_office %>
 </p>
 
 <p>
   <b>Bank account:</b>
-  <%= @bankaccount.bank_account %>
+  <%= @bank_account.bank_account %>
 </p>
 
 <p>
   <b>Contact name:</b>
-  <%= @bankaccount.contact_name %>
+  <%= @bank_account.contact_name %>
 </p>
 
 <p>
   <b>Contact email:</b>
-  <%= @bankaccount.contact_email %>
+  <%= @bank_account.contact_email %>
 </p>
 
 <p>
   <b>Contact phone:</b>
-  <%= @bankaccount.contact_phone %>
+  <%= @bank_account.contact_phone %>
 </p>
 
 
-<%= link_to 'Edit', edit_bank_account_path(@bankaccount) %> |
-<%= link_to 'Back', bank_accounts_path %>
+<%= link_to 'Edit', edit_bank_account_path(@bank_account) %>
+
