--- a/app/views/layouts/owner.html.erb
+++ b/app/views/layouts/owner.html.erb
@@ -191,7 +191,7 @@
           </div>
           <div class="accordion-group">
             <div class="accordion-heading">
-              <a style="text-decoration: none;text-align: left" class="accordion-toggle btn" href=<%="/api/v1/users/"+current_user.id.to_s+"/assign_owners"%>>
+              <a style="text-decoration: none;text-align: left" class="accordion-toggle btn" href=<%="/users/"+current_user.id.to_s+"/assign_owners"%>>
                 <i class="icon-picture"></i><span>Assign more Owners</span>
               </a>
             </div>
