--- a/app/views/bank_accounts/_form.html.erb
+++ b/app/views/bank_accounts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@bank_account, html: { method: :put, class: 'form-horizontal' }) do |f| %>
+<%= form_for(@bank_account, html: { class: 'form-horizontal' }) do |f| %>
 <div class="row-fluid">
   <div class="span6">
     <div class="accordion" id="accordionFormState">
