--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -37,7 +37,7 @@
   </div>
 
   <label>
-    <%= f.check_box :terms_of_service %> I agree all your <a href="#">Terms of Services</a>
+    <%= f.check_box :terms_of_service %> I agree to all <a href="#">Terms of Services</a>
   </label>
   <br>
 
