--- a/app/views/layouts/owner.html.erb
+++ b/app/views/layouts/owner.html.erb
@@ -191,6 +191,13 @@
           </div>
           <div class="accordion-group">
             <div class="accordion-heading">
+              <a style="text-decoration: none;text-align: left" class="accordion-toggle btn" href=<%= payments_path %>>
+                <i class="icon-picture"></i><span>Payments</span>
+              </a>
+            </div>
+          </div>
+          <div class="accordion-group">
+            <div class="accordion-heading">
               <a style="text-decoration: none;text-align: left" class="accordion-toggle btn" href=<%= cities_path %>>
                 <i class="icon-picture"></i><span>Cities</span>
               </a>
