--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -2,12 +2,7 @@
 
 <table>
   <tr>
-    <th>X pos</th>
-    <th>Y pos</th>
-    <th>Street</th>
     <th>Area</th>
-    <th>City</th>
-    <th>Bank Account</th>
     <th>Rate</th>
     <th>User</th>
     <th>Start time</th>
@@ -19,14 +14,9 @@
 
 <% @payments.each do |payment| %>
   <tr>
-    <td><%= payment.x_pos %></td>
-    <td><%= payment.y_pos %></td>
-    <td><%= payment.street %></td>
     <td><%= payment.area %></td>
-    <td><%= payment.city %></td>
-    <td><%= payment.bank_account %></td>
     <td><%= payment.rate %></td>
-    <td><%= payment.user %></td>
+    <td><%= payment.user.firstname + ' ' + payment.user.lastname %></td>
     <td><%= payment.start_time %></td>
     <td><%= payment.end_time %></td>
     <td><%= link_to 'Show', payment %></td>
