added car to payment add valid_start_at, valid+end_at to rate

--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+      <%= f.label :car %><br />
+      <%= f.text_field :car %>
+  </div>
+  <div class="field">
     <%= f.label :x_pos %><br />
     <%= f.text_field :x_pos %>
   </div>
@@ -20,24 +24,8 @@
     <%= f.text_field :y_pos %>
   </div>
   <div class="field">
-    <%= f.label :street %><br />
-    <%= f.text_field :street %>
-  </div>
-  <div class="field">
     <%= f.label :area %><br />
     <%= f.text_field :area %>
-  </div>
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :bank_account %><br />
-    <%= f.text_field :bank_account %>
-  </div>
-  <div class="field">
-    <%= f.label :rate %><br />
-    <%= f.text_field :rate %>
   </div>
   <div class="field">
     <%= f.label :user %><br />
